--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
    1. VARIABLES 
    ========================================= */
 :root {
-    --primary-green: hsl(230, 66%, 93%);
+    --primary-green: #F0FDF4;
     --accent-red: #A63A3A;
     --dark-text: #2F4F4F;
     --white: #FFFFFF;
